--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
     "husky": "^8.0.2",
-    "jest": "^27.5.1",
-    "jest-extended": "^2.0.0"
+    "jest": "^29.7.0",
+    "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.15"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -36,7 +37,8 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
